# Local_LLM--Chat-with-local-llm-using-python-

./: README.md  main.py  markdown_files.db  pyproject.toml
config/: settings.py
json/: 1.json  2.json
markdown/: first.md  second.md
modules/markdown_reader/: Reader.py
modules/markdowndb/: markdowndb.py
modules/voice_recognition/: voice.py
