[project]
name = "local-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "googletrans>=4.0.2",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "notify-py>=0.3.43",
    "pathlib>=1.0.1",
    "pocketsphinx>=5.0.4",
    "pyaudio>=0.2.14",
    "speechrecognition>=3.14.3",
]
